package com.rocketracer.game.ECS.Components;


import com.badlogic.ashley.core.Component;

public enum SpecificTypeComponent implements Component {
    BIRD,
    PLANE,
    ASTEROID,
    SATELLITE,
    FUELCAN
}
